--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,11 @@
-# Authentication database name.
-#spring.data.mongodb.authentication-database= 
-# Database name.
+# MongoDB Atlas Database conneciton properties
+#########################################################
+spring.data.mongodb.uri=mongodb+srv://Josh:ssj456@codechallenge.wuaid.mongodb.net/codechallenge?retryWrites=true&w=majority
 spring.data.mongodb.database=codechallenge
-# Fully qualified name of the FieldNamingStrategy to use.
-#spring.data.mongodb.field-naming-strategy= 
-# GridFS database name.
-#spring.data.mongodb.grid-fs-database= 
- # Mongo server host.
-spring.data.mongodb.host=localhost
- # Login password of the mongo server.
-#spring.data.mongodb.password=
- # Mongo server port.
-spring.data.mongodb.port=27017
-# Enable Mongo repositories.
-#spring.data.mongodb.repositories.enabled=true 
-#spring.data.mongodb.uri=mongodb://localhost/test # Mongo database URI. When set, host and port are ignored.
-#spring.data.mongodb.username= # Login user of the mongo server.
+#########################################################
+# MongoDB Local database connection properties
+#########################################################
+#spring.data.mongodb.database=codechallenge
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+#########################################################
